feat: Enhance metadata and translations
Adds meta tags for improved SEO and social sharing.
Implements dynamic title and description updates based on selected language.
Introduces new translation keys for page titles, meta descriptions, and search results hints.
Includes a phone icon and a search icon for better UI.
Refactors the DonorTable to display a "no results" message with a hint when no donors are found.
Removes the hardcoded phone number from the footer, suggesting it should be managed dynamically or removed.

--- a/index.html
+++ b/index.html
@@ -1,11 +1,24 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://upload.wikimedia.org/wikipedia/commons/a/a9/Algerian_Red_Crescent_logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gouttes d’Espoir — Banque des donneurs</title>
+    <meta name="description" content="A professional, modern, and fully responsive website for the Algerian Red Crescent – Wilaya of Sidi Bel Abbès, aimed at registering new blood donors and allowing users to search for compatible blood donors efficiently." />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Gouttes d’Espoir — Banque des donneurs" />
+    <meta property="og:description" content="A professional, modern, and fully responsive website for the Algerian Red Crescent – Wilaya of Sidi Bel Abbès, aimed at registering new blood donors and allowing users to search for compatible blood donors efficiently." />
+    <meta property="og:image" content="https://upload.wikimedia.org/wikipedia/commons/a/a9/Algerian_Red_Crescent_logo.svg" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary" />
+    <meta property="twitter:title" content="Gouttes d’Espoir — Banque des donneurs" />
+    <meta property="twitter:description" content="A professional, modern, and fully responsive website for the Algerian Red Crescent – Wilaya of Sidi Bel Abbès, aimed at registering new blood donors and allowing users to search for compatible blood donors efficiently." />
+    <meta property="twitter:image" content="https://upload.wikimedia.org/wikipedia/commons/a/a9/Algerian_Red_Crescent_logo.svg" />
+    
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
       /* Simple scrollbar styling for a more modern look */
