feat: Add animated background elements and UI polish
Introduce subtle floating and pulsing animations to background elements for a more engaging user experience. Adjust header styling for improved visual hierarchy and responsiveness, including logo and title size changes based on scroll position.

--- a/index.html
+++ b/index.html
@@ -102,6 +102,29 @@
       .animate-pop {
         animation: pop-in 0.3s cubic-bezier(0.16, 1, 0.3, 1) forwards;
       }
+
+      /* Floating Animation */
+      @keyframes float {
+        0% { transform: translateY(0px) rotate(0deg); }
+        50% { transform: translateY(-15px) rotate(5deg); }
+        100% { transform: translateY(0px) rotate(0deg); }
+      }
+      .animate-float {
+        animation: float 6s ease-in-out infinite;
+      }
+      .animate-float-delayed {
+        animation: float 7s ease-in-out infinite 2s;
+      }
+
+      /* Pulse Ring Animation */
+      @keyframes pulse-ring {
+        0% { transform: scale(0.8); box-shadow: 0 0 0 0 rgba(214, 31, 31, 0.7); }
+        70% { transform: scale(1); box-shadow: 0 0 0 10px rgba(214, 31, 31, 0); }
+        100% { transform: scale(0.8); box-shadow: 0 0 0 0 rgba(214, 31, 31, 0); }
+      }
+      .animate-pulse-ring {
+        animation: pulse-ring 2s infinite;
+      }
     </style>
   <script type="importmap">
 {
